--- a/index.html
+++ b/index.html
@@ -13,44 +13,22 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <script>
-        // Initialize tailwind configuration
-        tailwind.config = {
-            darkMode: 'class',
-            theme: {
-                extend: {}
-            }
-        }
-    </script>
 </head>
 <body>
-    <div id="root"></div>
+    <div id="root">
+        <div id="loading">Loading Mind Map Creator...</div>
+    </div>
 
-    <!-- Load your React component -->
+    <!-- Load your component definition first -->
+    <script type="text/babel" data-presets="react" src="mindmap.js"></script>
+
+    <!-- Initialize the app -->
     <script type="text/babel">
-        // Define icons using Font Awesome
-        const Icons = {
-            Plus: () => <i className="fas fa-plus"></i>,
-            ArrowUpCircle: () => <i className="fas fa-arrow-circle-up"></i>,
-            ZoomIn: () => <i className="fas fa-search-plus"></i>,
-            ZoomOut: () => <i className="fas fa-search-minus"></i>,
-            Download: () => <i className="fas fa-download"></i>,
-            Sun: () => <i className="fas fa-sun"></i>,
-            Moon: () => <i className="fas fa-moon"></i>,
-            Edit2: () => <i className="fas fa-edit"></i>,
-            Trash2: () => <i className="fas fa-trash"></i>,
-            Check: () => <i className="fas fa-check"></i>
-        };
-
-        // Import your main component
-        const { MindMapCreator } = window;
-
-        // Render when the DOM is ready
-        const root = ReactDOM.createRoot(document.getElementById('root'));
-        root.render(<MindMapCreator />);
+        // Wait for everything to load
+        window.addEventListener('DOMContentLoaded', () => {
+            const root = ReactDOM.createRoot(document.getElementById('root'));
+            root.render(React.createElement(MindMapCreator));
+        });
     </script>
-
-    <!-- Load your component definition -->
-    <script type="text/babel" src="mindmap.js"></script>
 </body>
 </html>
